# mimesis-factory

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Pipfile  README.md  README.rst  account.py  mimesis_factory.py  pyproject.toml  setup.cfg  setup.py  test_basic.py  test_idea.py
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: test.yml
mimesis_factory/: __init__.py  main.py  provider.py
tests/: test_field_params.py  test_idea.py  test_locale_override.py  test_providers.py  test_raw_factories.py  test_raw_objects.py
