[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "mimesis_factory"
version = "1.0.0"
description = "Mimesis integration with factory_boy"

license = "MIT"

authors = [
    "Nikita Sobolev <mail@sobolevn.me>",
    "Líkið Geimfari <likid.geimfari@gmail.com>"
]

readme = 'README.md'

repository = "https://github.com/mimesis-lab/mimesis-factory"
homepage = "https://github.com/mimesis-lab/mimesis-factory"

keywords = [
  "mimesis",
  "factory_boy",
  "testing",
  "fixtures",
  "fake data",
  "fabric",
  "factory"
]

[tool.poetry.dependencies]
python = "^3.6"
factory-boy = "^2.11"
mimesis = "^3.1"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.8"
pytest-factoryboy = "^2.0"
pytest-randomly = "^3.1"
pytest = "^5.3"
wemake-python-styleguide = "^0.13"
flake8-pytest = "^1.3"
validators = "^0.14.1"
mypy = "^0.750"
safety = "^1.8"
